@@ -1,76 +1,230 @@
-# Library Management System (JavaFX)
+# 📚 Library Management System
+> A JavaFX + JDBC desktop application for managing library book borrowing operations
 
-This project is a desktop **Library Management System** built with **JavaFX** and **MySQL**.  
-It focuses on managing the borrow/return workflow between students and books.
+![Java](https://img.shields.io/badge/Java-17%2B-orange?style=flat-square&logo=java)
+![JavaFX](https://img.shields.io/badge/JavaFX-21-blue?style=flat-square)
+![MySQL](https://img.shields.io/badge/MySQL-8.0-4479A1?style=flat-square&logo=mysql)
+![JDBC](https://img.shields.io/badge/JDBC-Driver-green?style=flat-square)
+![License](https://img.shields.io/badge/License-MIT-yellow?style=flat-square)
 
-## Description
+---
 
-The application allows you to:
-- Load and display all borrow records in a table.
-- Add a new borrow transaction (student, book, borrow date).
-- Return a borrowed book by setting return date and status.
-- Delete a borrow record.
-- Show only currently borrowed books.
-- Search borrow records by student ID and book ID.
+## 📖 Description
 
-The UI is implemented with FXML, and database operations are handled through DAO classes.
+The **Library Management System** is a desktop application built with **JavaFX** and **JDBC** that demonstrates real-world database interaction through a clean, modern dark-themed UI. It manages the core library workflow — students borrowing and returning books — using a proper **Many-to-Many** relational database design.
 
-## Project Structure
+This project was designed as a **teaching tool** for JDBC concepts, covering everything from basic CRUD operations to transactions, JOIN queries, and the DAO design pattern.
 
-- `app/Main.java` - JavaFX application entry point.
-- `views/Borrow.fxml` - Main UI layout.
-- `controllers/BorrowController.java` - UI logic and event handlers.
-- `dao/` - Data access layer (`BorrowDAO`, `BookDAO`, `StudentDAO`).
-- `models/` - Domain models (`Borrow`, `Book`, `Student`).
-- `config/DBConnection.java` - Singleton database connection manager.
-- `styles/BorrowFormStyle.css` - UI styling.
+---
 
-## Tech Stack
+## ✨ Features
 
-- Java
-- JavaFX
-- MySQL
-- JDBC
-- Apache Ant (NetBeans project)
+- 📖 **Borrow a Book** — creates a borrow record and decreases available copies (uses DB Transaction)
+- 🔄 **Return a Book** — marks borrow as returned and restores available copies (uses DB Transaction)
+- 🗑️ **Delete a Borrow** — removes a borrow record from the database
+- 👁️ **View Record** — fetch a specific borrow by Book ID and Student ID
+- 📋 **All Borrowed Books** — JOIN query showing all currently borrowed books with student info
+- 🎓 **All Students Borrowing** — shows all students with active borrows
+- 🔍 **Search by Genre** — filter borrow records by book genre
+- 🔎 **Search by IDs** — find borrow records using Book ID + Student ID
 
-## Database Requirements
+---
 
-Default connection configuration is in `config/DBConnection.java`:
-- URL: `jdbc:mysql://localhost:3306/library-system`
-- User: `root`
-- Password: `` (empty)
+## 🗂️ Project Structure
 
-Make sure the database `library-system` exists and includes the required tables used by the DAOs:
-- `books`
-- `students`
-- `borrow`
-
-## How to Run
-
-### From NetBeans
-1. Open the project.
-2. Ensure JavaFX SDK and MySQL JDBC driver are configured.
-3. Run `app/Main.java`.
-
-### With Ant
-Use a command like:
-
-```bash
-ant -f C:\\Users\\aya\\Documents\\NetBeansProjects\\week9 -Dnb.internal.action.name=run.single -Djavac.includes=app/Main.java -Drun.class=app.Main run-single
+```
+LibraryManagementSystem/
+│
+├── src/
+│   ├── model/
+│   │   ├── Book.java            # Book entity
+│   │   ├── Student.java         # Student entity
+│   │   └── Borrow.java          # Borrow junction entity
+│   │
+│   ├── dao/
+│   │   ├── BookDAO.java         # CRUD operations for Book
+│   │   ├── StudentDAO.java      # CRUD operations for Student
+│   │   └── BorrowDAO.java       # Borrow logic + Transactions + JOINs
+│   │
+│   ├── ui/
+│   │   ├── BorrowForm.fxml      # Main borrow management UI
+│   │   ├── BorrowForm.css       # Dark theme stylesheet
+│   │   └── BorrowController.java# UI logic and event handling
+│   │
+│   ├── util/
+│   │   └── DBConnection.java    # Singleton DB connection utility
+│   │
+│   └── Main.java                # Application entry point
+│
+├── database/
+│   └── library_db.sql           # Database schema + sample data
+│
+└── README.md
 ```
 
-## JavaFX Warning Note
+---
 
-If you see:
+## 🗃️ Database Schema
 
-`WARNING: Use --enable-native-access=javafx.graphics`
+```sql
+-- Students table
+CREATE TABLE student (
+    student_id     INT PRIMARY KEY AUTO_INCREMENT,
+    name           VARCHAR(100) NOT NULL,
+    email          VARCHAR(100) UNIQUE,
+    phone          VARCHAR(15),
+    enrollment_date DATE
+);
 
-it is a JavaFX runtime warning on newer Java versions.  
-You can suppress it by adding this VM option:
+-- Books table
+CREATE TABLE book (
+    book_id          INT PRIMARY KEY AUTO_INCREMENT,
+    title            VARCHAR(200) NOT NULL,
+    author           VARCHAR(100),
+    isbn             VARCHAR(20) UNIQUE,
+    genre            VARCHAR(50),
+    total_copies     INT DEFAULT 1,
+    available_copies INT DEFAULT 1
+);
 
-`--enable-native-access=javafx.graphics`
+-- Borrow table (M-N junction)
+CREATE TABLE borrow (
+    borrow_id   INT PRIMARY KEY AUTO_INCREMENT,
+    student_id  INT NOT NULL,
+    book_id     INT NOT NULL,
+    borrow_date DATE NOT NULL,
+    return_date DATE,
+    status      ENUM('BORROWED', 'RETURNED', 'OVERDUE') DEFAULT 'BORROWED',
+    FOREIGN KEY (student_id) REFERENCES student(student_id),
+    FOREIGN KEY (book_id)    REFERENCES book(book_id)
+);
+```
 
-## Notes
+### Entity Relationship
 
-- The database connection is implemented using the Singleton pattern.
-- The table view refreshes with `setAll(...)` to avoid duplicate rows on repeated view actions.
+```
+Student ──────────< Borrow >────────── Book
+(1 student borrows many books)   (1 book borrowed by many students)
+```
+
+---
+
+## ⚙️ JDBC Concepts Covered
+
+| Concept | Where Used |
+|--------|-----------|
+| `Connection` | `DBConnection.java` — connects to MySQL |
+| `PreparedStatement` | All DAO insert/update/delete operations |
+| `ResultSet` | Reading data and populating the TableView |
+| `Transactions` | Borrow & Return operations (atomic) |
+| `JOIN Queries` | All Borrowed Books, All Students Borrowing |
+| `SQLException` | Try-catch error handling in all DAOs |
+| DAO Pattern | `BookDAO`, `StudentDAO`, `BorrowDAO` |
+
+---
+
+## 🚀 Getting Started
+
+### Prerequisites
+
+- Java 17 or higher
+- JavaFX 21 SDK
+- MySQL 8.0
+- MySQL JDBC Driver (`mysql-connector-j-8.x.jar`)
+- IDE: IntelliJ IDEA or Eclipse
+
+### 1. Clone the Repository
+
+```bash
+git clone https://github.com/yourusername/library-management-system.git
+cd library-management-system
+```
+
+### 2. Set Up the Database
+
+```bash
+mysql -u root -p
+source database/library_db.sql
+```
+
+### 3. Configure DB Connection
+
+Edit `src/util/DBConnection.java`:
+
+```java
+private static final String URL      = "jdbc:mysql://localhost:3306/library_db";
+private static final String USER     = "root";
+private static final String PASSWORD = "your_password";
+```
+
+### 4. Add JDBC Driver
+
+Add `mysql-connector-j-8.x.jar` to your project's classpath/libraries.
+
+### 5. Run the Application
+
+Run `Main.java` from your IDE.
+
+---
+
+## 🔄 Core Business Logic
+
+### Borrow a Book (Transaction)
+```
+1. Check available_copies > 0
+2. Check student doesn't already have this book
+3. INSERT into borrow table
+4. UPDATE book SET available_copies = available_copies - 1
+5. COMMIT — or ROLLBACK if any step fails
+```
+
+### Return a Book (Transaction)
+```
+1. Find open borrow record (status = BORROWED)
+2. UPDATE borrow SET return_date = today, status = RETURNED
+3. UPDATE book SET available_copies = available_copies + 1
+4. COMMIT — or ROLLBACK if any step fails
+```
+
+---
+
+## 🎨 UI Design
+
+- **Framework:** JavaFX with FXML (Scene Builder compatible)
+- **Theme:** Dark Navy (`#0f172a`) with Blue accent (`#3b82f6`)
+- **Layout:** Split-pane — Form panel (left) + TableView (right)
+- **Styling:** External CSS file (`BorrowForm.css`)
+
+---
+
+## 📋 Status Indicators
+
+| Status | Meaning |
+|--------|---------|
+| 🔵 `BORROWED` | Book is currently with the student |
+| 🟢 `RETURNED` | Book has been returned |
+| 🟡 `OVERDUE` | Return date passed, not yet returned |
+
+---
+
+## 👨‍🏫 Educational Purpose
+
+This project was developed as a **JDBC teaching example** covering:
+
+- Relational DB design with M-N relationships
+- Java Model classes (POJO)
+- DAO design pattern
+- JDBC CRUD operations
+- Database Transactions
+- JOIN queries with ResultSet
+- JavaFX + FXML UI integration
+
+---
+
+## 📄 License
+
+This project is licensed under the MIT License — feel free to use it for educational purposes.
+
+---
+
+> Built with ❤️ for JDBC students — Learn by building something real.
